[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://folder_for_combat/enemy.gd" type="Script" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("things_to_flip/Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17.256, 3.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28.2717, 12.2779 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -39.7609 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 0.52
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.51 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17.256, 3.5 ), Vector2( 19.628, 3.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 28.2717, 12.2779 ), Vector2( 35.372, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("things_to_flip/attack_box_area/attack_box_collis:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -39.7609, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_to_retreat"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "get_hit"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("things_to_flip/Icon:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "resetup_logic"
} ]
}

[sub_resource type="SegmentShape2D" id=8]
b = Vector2( 39, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 31.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.256, 3.5 )

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -15.0, 15.0, 55.0, -55.0 ]
}

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/attack = SubResource( 7 )
anims/get_hit = SubResource( 5 )

[node name="wait_after_idle" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="things_to_flip" type="Node2D" parent="."]

[node name="ray_cast_attack" type="Area2D" parent="things_to_flip"]
position = Vector2( 1, 30 )

[node name="ray_cast_coll" type="CollisionShape2D" parent="things_to_flip/ray_cast_attack"]
position = Vector2( 14, -6 )
shape = SubResource( 8 )
disabled = true

[node name="Icon" type="Sprite" parent="things_to_flip"]
position = Vector2( 0, 31 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="hit_box_area" type="Area2D" parent="things_to_flip" groups=["enemy"]]

[node name="hit_box_collis" type="CollisionShape2D" parent="things_to_flip/hit_box_area"]
position = Vector2( 0, 30 )
shape = SubResource( 1 )

[node name="attack_box_area" type="Area2D" parent="things_to_flip"]

[node name="attack_box_collis" type="CollisionShape2D" parent="things_to_flip/attack_box_area"]
position = Vector2( 28.2717, 12.2779 )
rotation = -0.693959
shape = SubResource( 6 )

[node name="wait_after_retreat" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="wait_after_idle" to="." method="_on_wait_after_idle_timeout"]
[connection signal="area_entered" from="things_to_flip/ray_cast_attack" to="." method="_on_ray_cast_attack_area_entered"]
[connection signal="area_entered" from="things_to_flip/hit_box_area" to="." method="_on_hit_box_area_area_entered"]
[connection signal="area_exited" from="things_to_flip/hit_box_area" to="." method="_on_hit_box_area_area_exited"]
[connection signal="area_entered" from="things_to_flip/attack_box_area" to="." method="_on_attack_box_area_area_entered"]
[connection signal="timeout" from="wait_after_retreat" to="." method="_on_wait_after_retreat_timeout"]
